Added actiona mailer to the application

--- a/contact_form/app/views/contacts/new.html.erb
+++ b/contact_form/app/views/contacts/new.html.erb
@@ -40,7 +40,7 @@
 				</div>
 			</form>
 
-			<div class="contact100-more flex-col-c-m" style="background-image: url('images/bg-01.jpg');">
+			<div class="contact100-more flex-col-c-m" style="background-image: url('/front_end_ui/images/bg-01.jpg');">
 				<div class="flex-w size1 p-b-47">
 					<div class="txt1 p-r-25">
 						<span class="lnr lnr-map-marker"></span>
@@ -96,21 +96,21 @@
 
 	<div id="dropDownSelect1"></div>
 
-	<script src="../public/front_end_ui/vendor/jquery/jquery-3.2.1.min.js"></script>
-	<script src="../public/front_end_ui/vendor/animsition/js/animsition.min.js"></script>
-	<script src="../public/front_end_ui/vendor/bootstrap/js/popper.js"></script>
-	<script src="../public/front_end_ui/vendor/bootstrap/js/bootstrap.min.js"></script>
-	<script src="../public/front_end_ui/vendor/select2/select2.min.js"></script>
+	<script src="/front_end_ui/vendor/jquery/jquery-3.2.1.min.js"></script>
+	<script src="/front_end_ui/vendor/animsition/js/animsition.min.js"></script>
+	<script src="/front_end_ui/vendor/bootstrap/js/popper.js"></script>
+	<script src="/front_end_ui/vendor/bootstrap/js/bootstrap.min.js"></script>
+	<script src="/front_end_ui/vendor/select2/select2.min.js"></script>
 	<script>
 		$(".selection-2").select2({
 			minimumResultsForSearch: 20,
 			dropdownParent: $('#dropDownSelect1')
 		});
 	</script>
-	<script src="../public/front_end_ui/vendor/daterangepicker/moment.min.js"></script>
-	<script src="../public/front_end_ui/vendor/daterangepicker/daterangepicker.js"></script>
-	<script src="../public/front_end_ui/vendor/countdowntime/countdowntime.js"></script>
-	<script src="../public/front_end_ui/js/main.js"></script>
+	<script src="/front_end_ui/vendor/daterangepicker/moment.min.js"></script>
+	<script src="/front_end_ui/vendor/daterangepicker/daterangepicker.js"></script>
+	<script src="/front_end_ui/vendor/countdowntime/countdowntime.js"></script>
+	<script src="/front_end_ui/js/main.js"></script>
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
 	<script>
 	  window.dataLayer = window.dataLayer || [];
